[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/forward.png" type="Texture" id=1]
[ext_resource path="res://src/ui/ScoreHUD.gd" type="Script" id=2]
[ext_resource path="res://assets/leaderboard/background.png" type="Texture" id=3]
[ext_resource path="res://src/ui/EntityScore.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/scoreboard/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/leaderboard/sub-background.png" type="Texture" id=9]
[ext_resource path="res://src/ui/scoreboard/EntityHeader.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 31, 32, 368, 368 )
margin_left = 39.0
margin_right = 39.0
margin_top = 38.0
margin_bottom = 40.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 9 )
region_rect = Rect2( 32, 35, 362, 362 )
margin_left = 36.0
margin_right = 44.0
margin_top = 35.0
margin_bottom = 43.0

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreFrame/MarginContainer/ToggleButton:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 110 ), Vector2( -388, 110 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreFrame/MarginContainer/ToggleButton:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -388, 110 ), Vector2( 0, 110 ) ]
}

[node name="ScoreHUD" type="PanelContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 110.0
margin_right = 512.0
margin_bottom = 479.0
rect_min_size = Vector2( 0, 30 )
rect_scale = Vector2( 0.8, 0.8 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreFrame" type="HBoxContainer" parent="."]
margin_left = 39.0
margin_top = 38.0
margin_right = 473.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ScoreDisplay" type="VBoxContainer" parent="ScoreFrame"]
margin_right = 424.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="ScoreFrame/ScoreDisplay" instance=ExtResource( 5 )]
margin_left = 212.0
margin_right = 212.0
size_flags_horizontal = 4

[node name="EntityHeader" parent="ScoreFrame/ScoreDisplay" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 424.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="SubBackground" type="PanelContainer" parent="ScoreFrame/ScoreDisplay"]
margin_top = 58.0
margin_right = 424.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="ScoreFrame/ScoreDisplay/SubBackground"]
margin_left = 36.0
margin_top = 35.0
margin_right = 380.0
margin_bottom = 190.0
size_flags_horizontal = 3
custom_constants/margin_right = -100
custom_constants/margin_top = -20
custom_constants/margin_left = -45
custom_constants/margin_bottom = -30

[node name="Row" type="VBoxContainer" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer"]
margin_left = -45.0
margin_top = -20.0
margin_right = 444.0
margin_bottom = 185.0
custom_constants/separation = 20

[node name="Entity1" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
margin_right = 489.0
margin_bottom = 55.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity1" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -3.0
margin_right = 771.0
margin_bottom = 162.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity2" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
margin_top = 75.0
margin_right = 489.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity2" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -4.0
margin_right = 771.0
margin_bottom = 161.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity3" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
margin_top = 150.0
margin_right = 489.0
margin_bottom = 205.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity3" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -5.0
margin_right = 771.0
margin_bottom = 160.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity4" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 225.0
margin_right = 492.0
margin_bottom = 280.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity4" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -6.0
margin_right = 771.0
margin_bottom = 159.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity5" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 300.0
margin_right = 492.0
margin_bottom = 355.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity5" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -8.0
margin_right = 771.0
margin_bottom = 157.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity6" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 300.0
margin_right = 492.0
margin_bottom = 355.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity6" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -9.0
margin_right = 771.0
margin_bottom = 156.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity7" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 450.0
margin_right = 492.0
margin_bottom = 505.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity7" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -10.0
margin_right = 771.0
margin_bottom = 155.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity8" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 150.0
margin_right = 492.0
margin_bottom = 205.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity8" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -12.0
margin_right = 771.0
margin_bottom = 153.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity9" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 225.0
margin_right = 492.0
margin_bottom = 280.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity9" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -14.0
margin_right = 771.0
margin_bottom = 151.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Entity10" type="Control" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row"]
visible = false
margin_top = 675.0
margin_right = 492.0
margin_bottom = 730.0
rect_min_size = Vector2( 400, 55 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntityScore" parent="ScoreFrame/ScoreDisplay/SubBackground/MarginContainer/Row/Entity10" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = -16.0
margin_right = 771.0
margin_bottom = 149.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="MarginContainer" type="MarginContainer" parent="ScoreFrame"]
margin_left = 424.0
margin_right = 434.0
margin_bottom = 291.0
custom_constants/margin_right = -30
custom_constants/margin_bottom = 10

[node name="ToggleButton" type="TextureButton" parent="ScoreFrame/MarginContainer"]
margin_right = 40.0
margin_bottom = 281.0
rect_min_size = Vector2( 40, 120 )
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 3 )

[connection signal="pressed" from="ScoreFrame/MarginContainer/ToggleButton" to="." method="_on_HideButton_pressed"]
